Refactor [#9] 리뷰에서 말씀하신 메서드 분리